# wayland-protocols-binaries

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
unstable/: CMakeLists.txt
unstable/xdg-shell/: CMakeLists.txt
